--- a/frontend/vite-project/package.json
+++ b/frontend/vite-project/package.json
@@ -10,10 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "lucide-react": "^0.460.0",
     "mergely": "^5.3.6",
     "mergely-react": "^1.1.0",
     "react": "^18.3.1",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.0"
   },
