--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -18,7 +18,7 @@ services:
     image: postgres:15
     container_name: postgres-db
     environment:
-      - POSTGRES_USER=postgres
+      - POSTGRES_USER=auth_user
       - POSTGRES_PASSWORD=postgres
       - POSTGRES_DB=auth_db
     ports:
