--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,6 +14,17 @@ services:
     networks:
       - app-network
 
+  frontend:
+    build:
+      context: ./frontend/vite-project
+      dockerfile: Dockerfile
+    container_name: frontend
+    ports:
+      - "81:80"
+    networks:
+      - app-network
+
+
   postgres:
     image: postgres:15
     container_name: postgres-db
