--- a/frontend/vite-project/package.json
+++ b/frontend/vite-project/package.json
@@ -10,10 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@monaco-editor/react": "^4.6.0",
+    "@uiw/react-codemirror": "^4.23.7",
     "axios": "^1.7.9",
     "lucide-react": "^0.460.0",
     "mergely": "^5.3.6",
     "mergely-react": "^1.1.0",
+    "monaco-editor": "^0.52.2",
     "react": "^18.3.1",
     "react-confetti": "^6.1.0",
     "react-dom": "^18.3.1",
@@ -31,7 +34,7 @@
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.11.0",
     "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.15",
+    "tailwindcss": "^3.4.17",
     "vite": "^5.4.10"
   }
 }
