--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ pydantic==1.10.7
 PyYAML>=6.0  # Using a version greater than 6.0
 deepdiff==6.3.1
 jinja2==3.1.2
-python-multipart==0.0.6
+#python-multipart==0.0.6
 psycopg2-binary
 python-jose[cryptography]
 passlib[bcrypt]
