--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -22,6 +22,7 @@ jobs:
       uses: webfactory/ssh-agent@v0.9.0
       with:
         ssh-private-key: ${{ secrets.SERVER_SSH_PRIVATE_KEY }}
+        log-public-key: false
     
     - name: Deploy to Server
       run: |
