--- a/frontend/vite-project/Dockerfile
+++ b/frontend/vite-project/Dockerfile
@@ -12,19 +12,7 @@ RUN npm install
 
 # Copy the rest of the application code to the working directory
 COPY . .
-
 # Build the application (assuming you have a build script in package.json)
-RUN npm run build
+EXPOSE 5173
 
-# Stage 2: Serve the app using Nginx
-FROM nginx:alpine
-
-# Copy the build output from the builder stage into the Nginx html directory
-COPY --from=builder /app/dist /usr/share/nginx/html
-
-# Expose port 80 to the outside world
-EXPOSE 80
-
-# Nginx will serve the app by default
-CMD ["nginx", "-g", "daemon off;"]
-
+CMD npm run dev
