--- a/frontend/vite-project/Dockerfile
+++ b/frontend/vite-project/Dockerfile
@@ -1,18 +1,47 @@
 # Stage 1: Build the application
 FROM node:19-alpine as builder
-
-# Set the working directory in the container
 WORKDIR /app
-
-# Copy package.json and package-lock.json (if available) to the working directory
 COPY package*.json ./
-
-# Install dependencies
 RUN npm install
-
-# Copy the rest of the application code to the working directory
 COPY . .
-# Build the application (assuming you have a build script in package.json)
-EXPOSE 5173
+RUN npm run build
 
-CMD npm run dev
+# Stage 2: Serve the app using Nginx
+FROM nginx:alpine
+# Copy the build output
+COPY --from=builder /app/dist /usr/share/nginx/html
+# Copy nginx configuration
+COPY nginx.conf /etc/nginx/conf.d/default.conf
+# Remove default nginx configuration
+RUN rm /etc/nginx/conf.d/default.conf.default 2>/dev/null || true
+EXPOSE 80
+CMD ["nginx", "-g", "daemon off;"]
+
+
+
+
+# Stage 1: Build the application
+#FROM node:19-alpine as builder
+#WORKDIR /app
+#COPY package*.json ./
+#RUN npm install
+#COPY . .
+#<<<<<<< HEAD
+# Build the application (assuming you have a build script in package.json)
+#EXPOSE 5173
+
+#CMD npm run dev
+#=======
+#RUN npm run build
+
+# Stage 2: Serve the app using Nginx
+#FROM nginx:alpine
+# Copy the build output
+#COPY --from=builder /app/dist /usr/share/nginx/html
+# Copy nginx configuration
+#COPY nginx.conf /etc/nginx/conf.d/default.conf
+# Remove default nginx configuration
+#RUN rm /etc/nginx/conf.d/default.conf.default 2>/dev/null || true
+#EXPOSE 80
+#CMD ["nginx", "-g", "daemon off;"]
+#>>>>>>> files modifed
